[package]
name = "ui"
version = "0.1.0"
authors = ["韩枫 <hanfeng.zwy@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { path="../tui-rs" }
termion = "1.5"
unicode-width = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs"] }
futures = "0.3"
chrono = "0.4"
diesel = { version="1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
